--- a/chulavista.html
+++ b/chulavista.html
@@ -8,7 +8,8 @@
 
 	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
 	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 
@@ -17,7 +18,7 @@
    	<link rel="stylesheet" href="bootstrap.min.css" >   
   	<link rel="stylesheet" href="bootstrap-2.3.2.css">
  
-     	<script src="bootstrap.min.js"></script> 	
+ 	
   	
   	<!--Load the AJAX API-->
     	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -152,6 +153,7 @@
   </head>
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
+     	<script src="bootstrap.min.js"></script>
 
     <div class="container">
 
