--- a/SanDiegoCO.html
+++ b/SanDiegoCO.html
@@ -292,22 +292,22 @@
   </head>
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 
 <div class="navbar-wrapper">
       <div class="container">
-	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <ul class="nav">
-		  <li>
+      <li>
         <a href="index.html"><img class="logo" src="LWSD_CMYK_BT_H.png" /></a>
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
-          <li>
+                <li>
             <a href="SanDiegoCO.html">County-wide health data</a>
           </li>
-        	    <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health</a>
+              <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health  <b class="caret"></b></a>
     <div class="dropdown-menu multi-column">
       <div class="container-fluid">
         <div class="row-fluid">
