--- a/chulavista.html
+++ b/chulavista.html
@@ -153,9 +153,7 @@
   </head>
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
-     	<script src="bootstrap.min.js"></script>
-
-    <div class="container">
+    <script src="bootstrap.min.js"></script>
 
 <div class="navbar-wrapper">
       <div class="container">
@@ -166,11 +164,11 @@
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
-       <li>
+                <li>
             <a href="SanDiegoCO.html">County-wide health data</a>
           </li>
               <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health</a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health  <b class="caret"></b></a>
     <div class="dropdown-menu multi-column">
       <div class="container-fluid">
         <div class="row-fluid">
