--- a/chulavista.html
+++ b/chulavista.html
@@ -153,9 +153,7 @@
   </head>
   <body>
     <script src="http://code.jquery.com/jquery.js"></script>
-     	<script src="bootstrap.min.js"></script>
-
-    <div class="container">
+    <script src="bootstrap.min.js"></script>
 
 <div class="navbar-wrapper">
       <div class="container">
@@ -166,8 +164,11 @@
       </li>
   </ul>
     <ul class="nav navbar-nav navbar-right">
+                <li>
+            <a href="SanDiegoCO.html">County-wide health data</a>
+          </li>
               <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health</a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health  <b class="caret"></b></a>
     <div class="dropdown-menu multi-column">
       <div class="container-fluid">
         <div class="row-fluid">
@@ -184,7 +185,6 @@
               <li><a href="#">El Cajon</a></li>
               <li><a href="#">Elliott-Navajo</a></li>
               <li><a href="#">Escondido</a></li>
-
             </ul>
           </div>
           <div class="span3">
@@ -241,18 +241,70 @@
 </ul>
   </div>
       </div>  </div>
-
-
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+             <li><a href="#">Fallbrook</a></li>
+              <li><a href="#">Harbison-Crest/El Cajon</a></li>
+              <li><a href="#">Jamul</a></li>
+              <li><a href="#">Kearny Mesa</a></li>
+              <li><a href="#">La Mesa</a></li>
+              <li><a href="#">Laguna-Pine Valley</a></li>
+              <li><a href="#">Lakeside</a></li>
+              <li><a href="#">Lemon Grove</a></li>
+              <li><a href="#">Mid-City</a></li>
+              <li><a href="#">Miramar</a></li>
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Mountain Empire</a></li>
+              <li><a href="#">National City</a></li>
+              <li><a href="#">North SD</a></li>
+              <li><a href="#">Oceanside</a></li>
+              <li><a href="#">Palomar-Julian</a></li>
+              <li><a href="#">Pauma</a></li>
+              <li><a href="#">Pendleton</a></li>
+              <li><a href="#">Peninsula</a></li>
+              <li><a href="#">Poway</a></li>
+              <li><a href="#">Ramona</a></li>
+          </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">San Dieguito</a></li>
+              <li><a href="#">San Marcos</a></li>
+              <li><a href="#">Santee</a></li>
+              <li><a href="#">South Bay</a></li>
+              <li><a href="#">Southeast SD</a></li>
+              <li><a href="#">Spring Valley</a></li>
+              <li><a href="#">Sweetwater</a></li>
+              <li><a href="#">University</a></li>
+              <li><a href="#">Valley Center</a></li>
+              <li><a href="#">Vista</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </li>
+  
+ </ul>
+</ul>
+  </div>
+      </div>  </div>
 
 <div class="container">
   <h1>Chula Vista Health Stats</h1>
 
 
    <div class="row-fluid">
-        <div class="span5">
-            <a href="#"><img class="img-polaroid" src="http://placehold.it/480x418"></a>
+        <div class="span8">
+            <iframe width="800" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://dianaeg2014.maps.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=943a54276f964eb5abd3a92cf8af50c2&amp;gcsextent=-117.4808,32.4762,-116.6376,32.8421&amp;displayslider=true&amp;displayscalebar=true&amp;displaylegend=true&amp;displaydetails=true&amp;displaybasemaps=true"></iframe>
           </div>
-	 <div class="span5 actions offset1">
+	 <div class="span4 actions">
+	 <div class="span9 actions offset1">
 
 	   <div class="span10 offset1">
              <div class="statistics">
@@ -265,19 +317,19 @@
 
       <div class="carousel-caption">
       
-              <div class="span11">
+              <div class="span13">
                   <h2>Overall Score Card</h2>
               </div>
-              <div class="span11">
+              <div class="span13">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <h3>Deaths</h3> <p>40 of 42</p>
               </div>
-              <div class="span11">
+              <div class="span13">
                   <h3>Hospitalizations</h3> <p>41 of 42</p>
               </div>
-              <div class="span11">
+              <div class="span13">
                 <h3>Emergency Room Visits</h3> <p>42 of 42</p>
               </div>
 
@@ -310,10 +362,6 @@
           </div>
         </div>
       </div>
-
-
-
-
     <div class="row-fluid">
 
 
@@ -344,7 +392,9 @@
 
         </div>
     </div>
-    <p class="caption">COPD = Chronic obstructive pulmonary disease, which includes chronic bronchitis and emphysema.</p>
+    <p class="caption">COPD = Chronic obstructive pulmonary disease, which includes chronic bronchitis and emphysema.<br>
+    	2011 contributors to 3-4-50% in percentages
+    </p>
 
       <div class="row-fluid">
         <div class="span12">      
