--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<html>
+<head>
 <style>
 
 .chart rect {
@@ -13,6 +14,9 @@
 
 </style>
 <script src="http://d3js.org/d3.v3.min.js"></script>
+</head>
+
+<body>
 <svg class="chart" width="420" height="120">
   <g transform="translate(0,0)">
     <rect width="40" height="19"></rect>
@@ -38,4 +42,4 @@
     <rect width="420" height="19"></rect>
     <text x="417" y="9.5" dy=".35em">42</text>
   </g>
-</svg>
+</svg></body></html>
