--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ var x = d3.scale.linear()
 var chart = d3.select(".chart")
     .attr("width", width);
 
-d3.tsv("https://raw.github.com/andrewakagawa/myrepo/master/data.tsv", type, function(error, data) {
+d3.tsv("data.tsv", type, function(error, data) {
   x.domain([0, d3.max(data, function(d) { return d.value; })]);
 
   chart.attr("height", barHeight * data.length);
