--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
+
 var width = 420,
     barHeight = 20;
 
@@ -31,9 +32,17 @@ var x = d3.scale.linear()
 var chart = d3.select(".chart")
     .attr("width", width);
 
-d3.tsv("data.tsv", type, function(error, data) {
-  x.domain([0, d3.max(data, function(d) { return d.value; })]);
+var data = [
+  {name: "Locke",    value:  4},
+  {name: "Reyes",    value:  8},
+  {name: "Ford",     value: 15},
+  {name: "Jarrah",   value: 16},
+  {name: "Shephard", value: 23},
+  {name: "Kwon",     value: 42}
+];
 
+
+  x.domain([0, d3.max(data, function(d) { return d.value; })]);
   chart.attr("height", barHeight * data.length);
 
   var bar = chart.selectAll("g")
@@ -50,7 +59,7 @@ d3.tsv("data.tsv", type, function(error, data) {
       .attr("y", barHeight / 2)
       .attr("dy", ".35em")
       .text(function(d) { return d.value; });
-});
+
 
 function type(d) {
   d.value = +d.value; // coerce to number
