--- a/index.html
+++ b/index.html
@@ -1,74 +1,291 @@
 <!DOCTYPE html>
-
 <head>
 <meta charset="utf-8">
 <style>
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  position: relative;
+  width: 960px;
+}
 
-.chart rect {
+.axis text {
+  font: 14px;
+  float:#333;
+}
+
+.x.axis text {
+  font: 30px sans-serif;
+  fill: #DDD;
+}
+
+.axis path{
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+y.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+x.axis line {
+  display: none;
+}
+
+.bar {
   fill: steelblue;
+  fill-opacity: .9;
 }
 
-.chart text {
-  fill: white;
-  font: 10px sans-serif;
-  text-anchor: end;
+.bar:hover {
+  fill: brown;
 }
 
+label {
+  position: absolute;
+  top: 0px;
+  left: 10px;
+}
 </style>
 </head>
 
 <body>
-<svg class="chart"></svg>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="d3.v3.min.js"></script>
+<script>
+
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 3500 - margin.left - margin.right,
+    height = 600 - margin.top - margin.bottom;
+
+
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1, 1);
+
+var y = d3.scale.linear()
+    .range([height, 0]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.csv("deathdata.csv", function(error, data) {
+
+  data.forEach(function(d) {
+    d.deathrate = +d.deathrate;
+  });
+
+  x.domain(data.map(function(d) { return d.SRA; }));
+  y.domain([0, d3.max(data, function(d) { return d.deathrate; })]);
+
+  svg.selectAll(".bar")
+      .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.SRA); })
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.deathrate); })
+      .attr("height", function(d) { return height - y(d.deathrate); });
+	  
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis)
+	  .selectAll("text")
+	  	.style("text-anchor", "start")
+	  	.style("font", "24px")
+        .attr("transform", function(d) {
+        	return "rotate(-90)"})
+		.attr("dx", "5px");
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end")
+      .text("deathrate");
+
+
+  d3.select("input").on("change", change);
+
+  var sortTimeout = setTimeout(function() {
+    d3.select("input").property("checked", true).each(change);
+  }, 2000);
+
+  function change() {
+    clearTimeout(sortTimeout);
+
+    // Copy-on-write since tweens are evaluated after a delay.
+    var x0 = x.domain(data.sort(this.checked
+        ? function(a, b) { return b.deathrate - a.deathrate; }
+        : function(a, b) { return d3.ascending(a.SRA, b.SRA); })
+        .map(function(d) { return d.SRA; }))
+        .copy();
+
+    var transition = svg.transition().duration(750),
+        delay = function(d, i) { return i * 50; };
+
+    transition.selectAll(".bar")
+        .delay(delay)
+        .attr("x", function(d) { return x0(d.SRA); });
+
+    transition.select(".x.axis")
+        .call(xAxis)
+		.selectAll("text")
+	  		.style("text-anchor", "start")
+      .selectAll("g")
+        .delay(delay);
+  }
+});
+
+</script>
+<label><input type="checkbox"> Sort values</label>
 
 <script>
 
+var dispatch = d3.dispatch("load", "statechange");
 
-var width = 420,
-    barHeight = 20;
-
-var x = d3.scale.linear()
-    .range([0, width]);
-
-var chart = d3.select(".chart")
-    .attr("width", width);
-
-var data = [
-  {name: "Locke",    value:  4},
-  {name: "Reyes",    value:  8},
-  {name: "Ford",     value: 15},
-  {name: "Jarrah",   value: 16},
-  {name: "Shephard", value: 23},
-  {name: "Kwon",     value: 42}
+var groups = [
+  "deathrate",
+  "heartdisease",
+  "stroke",
+  "asthma",
+  "pulminarydisease",
+  "diabetes",
+  "cancer"
 ];
 
+d3.csv("deathdata.csv", type, function(error, states) {
+  if (error) throw error;
+  var stateById = d3.map();
+  states.forEach(function(d) { stateById.set(d.SRA, d); });
+  dispatch.load(stateById);
+  dispatch.statechange(stateById.get("Alpine"));
+});
 
-  x.domain([0, d3.max(data, function(d) { return d.value; })]);
-  chart.attr("height", barHeight * data.length);
+// A drop-down menu for selecting a state; uses the "menu" namespace.
+dispatch.on("load.menu", function(stateById) {
+  var select = d3.select("body")
+    .append("div")
+    .append("select")
+      .on("change", function() { dispatch.statechange(stateById.get(this.value)); });
 
-  var bar = chart.selectAll("g")
-      .data(data)
-    .enter().append("g")
-      .attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
+  select.selectAll("option")
+      .data(stateById.values())
+    .enter().append("option")
+      .attr("value", function(d) { return d.SRA; })
+      .text(function(d) { return d.SRA; });
 
-  bar.append("rect")
-      .attr("width", function(d) { return x(d.value); })
-      .attr("height", barHeight - 1);
+  dispatch.on("statechange.menu", function(state) {
+    select.property("value", state.SRA);
+  });
+});
 
-  bar.append("text")
-      .attr("x", function(d) { return x(d.value) - 3; })
-      .attr("y", barHeight / 2)
-      .attr("dy", ".35em")
-      .text(function(d) { return d.value; });
+// A bar chart to show total population; uses the "bar" namespace.
+dispatch.on("load.bar", function(stateById) {
+  var margin = {top: 20, right: 20, bottom: 30, left: 40},
+      width = 80 - margin.left - margin.right,
+      height = 460 - margin.top - margin.bottom;
 
+  var y = d3.scale.linear()
+      .domain([0, d3.max(stateById.values(), function(d) { return d.total; })])
+      .rangeRound([height, 0])
+      .nice();
 
+  var yAxis = d3.svg.axis()
+      .scale(y)
+      .orient("left")
+      .tickFormat(d3.format(".2s"));
+
+  var svg = d3.select("body").append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis);
+
+  var rect = svg.append("rect")
+      .attr("x", 4)
+      .attr("width", width - 4)
+      .attr("y", height)
+      .attr("height", 0)
+      .style("fill", "#aaa");
+
+  dispatch.on("statechange.bar", function(d) {
+    rect.transition()
+        .attr("y", y(d.total))
+        .attr("height", y(0) - y(d.total));
+  });
+});
+
+// A pie chart to show population by age group; uses the "pie" namespace.
+dispatch.on("load.pie", function(stateById) {
+  var width = 880,
+      height = 460,
+      radius = Math.min(width, height) / 2;
+
+  var color = d3.scale.ordinal()
+      .domain(groups)
+      .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+
+  var arc = d3.svg.arc()
+      .outerRadius(radius - 10)
+      .innerRadius(radius - 70);
+
+  var pie = d3.layout.pie()
+      .sort(null);
+
+  var svg = d3.select("body").append("svg")
+      .attr("width", width)
+      .attr("height", height)
+    .append("g")
+      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+  var path = svg.selectAll("path")
+      .data(groups)
+    .enter().append("path")
+      .style("fill", color)
+      .each(function() { this._current = {startAngle: 0, endAngle: 0}; });
+
+  dispatch.on("statechange.pie", function(d) {
+    path.data(pie.value(function(g) { return d[g]; })(groups)).transition()
+        .attrTween("d", function(d) {
+          var interpolate = d3.interpolate(this._current, d);
+          this._current = interpolate(0);
+          return function(t) {
+            return arc(interpolate(t));
+          };
+        });
+  });
+});
+
+// Coerce population counts to numbers and compute total per state.
 function type(d) {
-  d.value = +d.value; // coerce to number
+  d.total = d3.sum(groups, function(k) { return d[k] = +d[k]; });
   return d;
 }
 
 </script>
+
 </body>
 </html>
 
