--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <head>
 <meta charset="utf-8">
 <style>
-
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: relative;
@@ -18,7 +17,6 @@ body {
   font: 30px sans-serif;
   fill: #DDD;
 }
-
 
 .axis path{
   fill: none;
@@ -41,23 +39,19 @@ x.axis line {
   fill-opacity: .9;
 }
 
-
-
 .bar:hover {
   fill: brown;
 }
 
 label {
   position: absolute;
-  bottom: 0px;
+  top: 0px;
   left: 10px;
 }
-
 </style>
 </head>
 
 <body>
-
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
@@ -88,7 +82,7 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.tsv("data.txt", function(error, data) {
+d3.csv("deathdata.csv", function(error, data) {
 
   data.forEach(function(d) {
     d.deathrate = +d.deathrate;
@@ -162,5 +156,136 @@ d3.tsv("data.txt", function(error, data) {
 
 </script>
 <label><input type="checkbox"> Sort values</label>
+
+<script>
+
+var dispatch = d3.dispatch("load", "statechange");
+
+var groups = [
+  "deathrate",
+  "heartdisease",
+  "stroke",
+  "asthma",
+  "pulminarydisease",
+  "diabetes",
+  "cancer"
+];
+
+d3.csv("deathdata.csv", type, function(error, states) {
+  if (error) throw error;
+  var stateById = d3.map();
+  states.forEach(function(d) { stateById.set(d.SRA, d); });
+  dispatch.load(stateById);
+  dispatch.statechange(stateById.get("Alpine"));
+});
+
+// A drop-down menu for selecting a state; uses the "menu" namespace.
+dispatch.on("load.menu", function(stateById) {
+  var select = d3.select("body")
+    .append("div")
+    .append("select")
+      .on("change", function() { dispatch.statechange(stateById.get(this.value)); });
+
+  select.selectAll("option")
+      .data(stateById.values())
+    .enter().append("option")
+      .attr("value", function(d) { return d.SRA; })
+      .text(function(d) { return d.SRA; });
+
+  dispatch.on("statechange.menu", function(state) {
+    select.property("value", state.SRA);
+  });
+});
+
+// A bar chart to show total population; uses the "bar" namespace.
+dispatch.on("load.bar", function(stateById) {
+  var margin = {top: 20, right: 20, bottom: 30, left: 40},
+      width = 80 - margin.left - margin.right,
+      height = 460 - margin.top - margin.bottom;
+
+  var y = d3.scale.linear()
+      .domain([0, d3.max(stateById.values(), function(d) { return d.total; })])
+      .rangeRound([height, 0])
+      .nice();
+
+  var yAxis = d3.svg.axis()
+      .scale(y)
+      .orient("left")
+      .tickFormat(d3.format(".2s"));
+
+  var svg = d3.select("body").append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis);
+
+  var rect = svg.append("rect")
+      .attr("x", 4)
+      .attr("width", width - 4)
+      .attr("y", height)
+      .attr("height", 0)
+      .style("fill", "#aaa");
+
+  dispatch.on("statechange.bar", function(d) {
+    rect.transition()
+        .attr("y", y(d.total))
+        .attr("height", y(0) - y(d.total));
+  });
+});
+
+// A pie chart to show population by age group; uses the "pie" namespace.
+dispatch.on("load.pie", function(stateById) {
+  var width = 880,
+      height = 460,
+      radius = Math.min(width, height) / 2;
+
+  var color = d3.scale.ordinal()
+      .domain(groups)
+      .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+
+  var arc = d3.svg.arc()
+      .outerRadius(radius - 10)
+      .innerRadius(radius - 70);
+
+  var pie = d3.layout.pie()
+      .sort(null);
+
+  var svg = d3.select("body").append("svg")
+      .attr("width", width)
+      .attr("height", height)
+    .append("g")
+      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+  var path = svg.selectAll("path")
+      .data(groups)
+    .enter().append("path")
+      .style("fill", color)
+      .each(function() { this._current = {startAngle: 0, endAngle: 0}; });
+
+  dispatch.on("statechange.pie", function(d) {
+    path.data(pie.value(function(g) { return d[g]; })(groups)).transition()
+        .attrTween("d", function(d) {
+          var interpolate = d3.interpolate(this._current, d);
+          this._current = interpolate(0);
+          return function(t) {
+            return arc(interpolate(t));
+          };
+        });
+  });
+});
+
+// Coerce population counts to numbers and compute total per state.
+function type(d) {
+  d.total = d3.sum(groups, function(k) { return d[k] = +d[k]; });
+  return d;
+}
+
+</script>
+
 </body>
 </html>
+
